fix bug on mobile

--- a/app/styles/prices.scss
+++ b/app/styles/prices.scss
@@ -56,6 +56,8 @@
         line-height: 24px;
         @media screen and (max-width: 700px) {
           padding: 20px 0;
+          top: auto;
+          transform: translateY(0);
         }
         ul {
           list-style-type: none;
